# AdventOfCode2024

./: .gitignore  CMakeLists.txt
Day1/: CMakeLists.txt  diff.h  main.cpp
Day2/: CMakeLists.txt  main.cpp  safety.h
Day3/: CMakeLists.txt  main.cpp  parser.h
Day4/: CMakeLists.txt  finder.h  main.cpp
Day5/: CMakeLists.txt  arranger.h  main.cpp
Day6/: CMakeLists.txt  locater.h  main.cpp
Day7/: CMakeLists.txt  main.cpp  operator.h
